<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="portfolio_heading">Android Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: Personal Project</string>

    <!-- Strings to prepend to our click logging and toast messages -->
    <string name="toast">Opening&#160;</string>
    <string name="click_text">You clicked on&#160;</string>
    
</resources>
